<resources>
    <string name="app_name">"Mathematic Game"</string>
    // Mathematic\nGame
    <string name="title">Mathematic\nGame</string>
    <string name="btnPlay">Play</string>
    <string name="GameRanking">Game Ranking</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="btnSettings">Setting</string>
    <string name="easyMode">Easy Mode</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="gameTime">"Time: "</string>
    <string name="sec">sec</string>
    <string name="correct">" correct, "</string>
    <string name="rank">"Rank "</string>
    <string name="gameQuestion">"Question "</string>
    <string name="answer">Your Answer</string>
    <string name="submit">Submit</string>
    <string name="rightarrow">→</string>
    <string name="nextQuestion">Next Question</string>
    <string name="Continue">Continue</string>
    <string name="Correct">Correct!</string>
    <string name="Wrong">Wrong!</string>
    <string name="Answeris">"Answer is "</string>
    <string name="PleaseEnterAnswer">Please enter answer</string>
    <string name="AnswerMissing">Answer missing</string>
    <string name="finish">Finish!</string>
    <string name="Correctis">"Correct: "</string>
    <string name="Wrongis">"\nWrong: "</string>
    <string name="corrects">" corrects"</string>
    <string name="YourRecords">Your Records</string>
    <string name="YourRecordsEasy">Your Records\n(Easy Mode)</string>
    <string name="YourRecordsNormal">Your Records\n(Normal Mode)</string>
    <string name="close">Close</string>

</resources>