<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cloud1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cloud1"
        android:translationX="100dp"
        android:translationY="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/cloud2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cloud2"
        android:translationX="20dp"
        android:translationY="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/cloud3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cloud3"
        android:translationX="300dp"
        android:translationY="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fontFamily="@font/jasonhandwriting"
            android:gravity="center"
            android:shadowColor="@color/gray"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80ffffff"
            android:orientation="vertical"

            >
            <!--    Play-->
            <Button
                android:id="@+id/btnPlay"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:onClick="clickPlay"
                android:padding="10dp"
                android:text="@string/btnPlay"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:backgroundTint="@color/blue"></Button>
            <!--    Game Ranking-->
            <Button
                android:id="@+id/btnGameRanking"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:onClick="clickRanking"
                android:padding="10dp"
                android:text="@string/GameRanking"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:backgroundTint="@color/blue"></Button>
            <!--    Your Rocords-->
            <Button
                android:id="@+id/btnYourRecords"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:onClick="clickRecord"
                android:padding="10dp"
                android:text="@string/YourRecords"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:backgroundTint="@color/blue"></Button>
            <!--    Settings-->
            <Button
                android:id="@+id/btnSettings"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:onClick="clickSettings"
                android:padding="10dp"
                android:text="@string/btnSettings"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:backgroundTint="@color/blue"></Button>
            <!--    Close-->
            <Button
                android:id="@+id/btnClose"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:onClick="clickClose"
                android:padding="10dp"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:backgroundTint="@color/blue"></Button>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>