<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliceblue"
    tools:context=".PlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/gameTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/boutiquebitmap9x9"
            android:text="@string/gameTime"
            android:textSize="30sp"></TextView>

        <TextView
            android:id="@+id/gameQuestionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/boutiquebitmap9x9"
            android:text="@string/gameQuestion"
            android:textSize="30sp"></TextView>

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/boutiquebitmap9x9"
            android:text=""
            android:textSize="30sp"></TextView>

        <LinearLayout
            android:id="@+id/normalMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:visibility="gone">

            <EditText
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:gravity="center_horizontal"
                android:hint="@string/answer"
                android:inputType="number"
                android:textSize="30sp"></EditText>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:onClick="submitTextAnswer"
                android:text="@string/rightarrow"
                android:textSize="30sp"></Button>
        </LinearLayout>

        <TableLayout
            android:id="@+id/mcMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TableRow>

                <Button
                    android:id="@+id/mc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/boutiquebitmap9x9"
                    android:onClick="MCAnswer"
                    android:text=""
                    android:textSize="30dp"></Button>
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/mc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/boutiquebitmap9x9"
                    android:onClick="MCAnswer"
                    android:text=""
                    android:textSize="30dp"></Button>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/mc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/boutiquebitmap9x9"
                    android:onClick="MCAnswer"
                    android:text=""
                    android:textSize="30dp"></Button>
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/mc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/boutiquebitmap9x9"
                    android:onClick="MCAnswer"
                    android:text=""
                    android:textSize="30dp"></Button>
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:id="@+id/feedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/CorrectWrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:text="@string/Correct"
                android:textSize="30sp"></TextView>

            <TextView
                android:id="@+id/correctAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:text=""
                android:textSize="30sp"></TextView>
            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/boutiquebitmap9x9"
                android:onClick="nextQuestion"
                android:text="@string/nextQuestion"
                android:textSize="30sp"
                ></Button>
        </LinearLayout>
        <Button
            android:id="@+id/Continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/boutiquebitmap9x9"
            android:onClick="restartGame"
            android:text="@string/Continue"
            android:textSize="30sp"
            android:visibility="gone"
            ></Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>